Shrinkwrap constraint crash #57488

Closed
opened 2018-10-29 14:24:42 +01:00 by Piotr Załóg · 4 comments

Windows 7 64b

Blender 2.80, hash: c750ebe113, commit date: 2018-10-29 00:08

When two objects have Shrinkwrap-constraints whihch are linked to the same mesh, Blender crash after moving this mesh.

crash_shrinkwrap_constraint_03.blend

  • Download and open .blend file from attachment
  • Select the Plane
  • Press key >>G<< (S and R also 'work')
  • Crash
Windows 7 64b Blender 2.80, hash: c750ebe113e, commit date: 2018-10-29 00:08 When two objects have Shrinkwrap-constraints whihch are linked to the same mesh, Blender crash after moving this mesh. [crash_shrinkwrap_constraint_03.blend](https://archive.blender.org/developer/F5283662/crash_shrinkwrap_constraint_03.blend) - Download and open .blend file from attachment - Select the Plane - Press key >>G<< (S and R also 'work') - Crash
Author

Added subscriber: @piotr-14

Added subscriber: @piotr-14

Added subscriber: @angavrilov

Added subscriber: @angavrilov

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Alexander Gavrilov self-assigned this 2018-10-29 18:41:07 +01:00

A multithreading problem, should be fixed now.

A multithreading problem, should be fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57488
No description provided.