Fix T57488: crash in Shrinkwrap constraint due to unsafe multi-threading.

- Constraints must not use mesh_get_eval_final as it isn't thread-safe.
- Depsgraph should keep lastDataMask when re-running COW.